# APSU

./: CMakeLists.txt  README.md
Kunlun/config/: config.h
Kunlun/crypto/: aes.hpp  bigint.hpp  block.hpp  curve25519.hpp  ec_group.hpp  ec_point.hpp  hash.hpp  otp.hpp  prg.hpp  setup.hpp
Kunlun/include/: global.hpp  std.inc
Kunlun/mpc/oprf/: ote_oprf.hpp
Kunlun/mpc/ot/: alsz_ote.hpp  iknp_ote.hpp  naor_pinkas_ot.hpp
Kunlun/mpc/peqt/: peqt_from_ddh.hpp
Kunlun/netio/: stream_channel.hpp
Kunlun/utility/: murmurhash2.hpp  print.hpp  routines.hpp  serialization.hpp
cli/: base_clp.h  common_utils.cpp  common_utils.h  csv_reader.cpp
cli/common/: common_utils.cpp  csv_reader.cpp  csv_reader.h
cli/pd_tool/: pd_tool.cpp
cli/receiver/: CMakeLists.txt  clp.h  receiver.cpp  receiver_utils.cpp  receiver_utils.h
cli/sender/: CMakeLists.txt  clp.h  sender.cpp
cmake/: APSUConfig.cmake.in  APSUMacros.cmake  CompileSchemaCXX.cmake  DetectArch.cmake
common/apsu/: CMakeLists.txt  config.h.in  crypto_context.h  item.cpp  item.h  log.cpp  log.h  powers.cpp  powers.h  psu_params.cpp  psu_params.fbs  psu_params.h  requests.h  responses.h  seal_object.h  thread_pool_mgr.cpp  thread_pool_mgr.h  version.cpp  version.h
common/apsu/fourq/: CMakeLists.txt  FourQ.h  FourQ_api.h  FourQ_internal.h  FourQ_params.h  crypto_util.c  eccp2.c  eccp2_core.c  eccp2_no_endo.c  hash_to_curve.c  random.c  table_lookup.h
common/apsu/fourq/amd64/: CMakeLists.txt
common/apsu/fourq/generic/: CMakeLists.txt
common/apsu/network/: CMakeLists.txt  channel.h  ciphertext.fbs  network_channel.h  receiver_operation.cpp  receiver_operation.h  receiver_operation_response.cpp  receiver_operation_response.h  result_package.cpp  result_package.fbs  result_package.h  rop.fbs  rop_header.fbs  rop_response.fbs  stream_channel.cpp  stream_channel.h
common/apsu/network/zmq/: CMakeLists.txt  zmq_channel.cpp  zmq_channel.h
common/apsu/oprf/: CMakeLists.txt  ecpoint.cpp  ecpoint.h  oprf_common.h  oprf_receiver.cpp  oprf_receiver.h  oprf_sender.cpp  oprf_sender.h
common/apsu/ot/: CMakeLists.txt  kunlun_ot.cpp  kunlun_ot.h
common/apsu/peqt/: CMakeLists.txt  DDHPEQT.cpp  DDHPEQT.h  OSNPEQT.cpp  OSNPEQT.h
common/apsu/permute/: CMakeLists.txt  apsu_OSNReceiver.cpp  apsu_OSNReceiver.h  apsu_OSNSender.cpp  apsu_OSNSender.h  apsu_benes.cpp  apsu_benes.h
common/apsu/util/: CMakeLists.txt  db_encoding.cpp  db_encoding.h  interpolate.cpp  interpolate.h  label_encryptor.cpp  label_encryptor.h  stopwatch.cpp  stopwatch.h  thread_pool.h  utils.cpp  utils.h
receiver/apsu/: CMakeLists.txt  bin_bundle.cpp  bin_bundle.fbs  bin_bundle.h  query.cpp  query.h  receiver_db.cpp  receiver_db.fbs  receiver_db.h  receiver_ddh.cpp  receiver_ddh.h  receiver_osn.cpp  receiver_osn.h
receiver/apsu/util/: CMakeLists.txt  cuckoo_filter.cpp  cuckoo_filter.h  cuckoo_filter_table.cpp  cuckoo_filter_table.h  hash.h
receiver/apsu/zmq/: CMakeLists.txt  receiver_dispatcher_ddh.cpp  receiver_dispatcher_ddh.h  receiver_dispatcher_osn.cpp  receiver_dispatcher_osn.h
sender/apsu/: CMakeLists.txt  itt.h  match_record.h  plaintext_powers.cpp  plaintext_powers.h  sender_ddh.cpp  sender_ddh.h  sender_osn.cpp  sender_osn.h  utils.cpp  utils.h
tools/: auto_test.py
