set(APSU_SOURCE_FILES_SENDER_OSN ${APSU_SOURCE_FILES_SENDER_OSN}
    ${CMAKE_CURRENT_LIST_DIR}/OSNPEQT.cpp
)
set(APSU_SOURCE_FILES_RECEIVER_OSN ${APSU_SOURCE_FILES_RECEIVER_OSN}
    ${CMAKE_CURRENT_LIST_DIR}/OSNPEQT.cpp
)
set(APSU_SOURCE_FILES_SENDER_DDH ${APSU_SOURCE_FILES_SENDER_DDH}
    ${CMAKE_CURRENT_LIST_DIR}/DDHPEQT.cpp
)
set(APSU_SOURCE_FILES_RECEIVER_DDH ${APSU_SOURCE_FILES_RECEIVER_DDH}
    ${CMAKE_CURRENT_LIST_DIR}/DDHPEQT.cpp
)

# Add header files for installation
install(
    FILES
        ${CMAKE_CURRENT_LIST_DIR}/DDHPEQT.h
        ${CMAKE_CURRENT_LIST_DIR}/OSNPEQT.h
    DESTINATION
        ${APSU_INCLUDES_INSTALL_DIR}/apsu/peqt
)

set(APSU_SOURCE_FILES ${APSU_SOURCE_FILES} PARENT_SCOPE)
set(APSU_SOURCE_FILES_SENDER_OSN ${APSU_SOURCE_FILES_SENDER_OSN} PARENT_SCOPE)
set(APSU_SOURCE_FILES_RECEIVER_OSN ${APSU_SOURCE_FILES_RECEIVER_OSN} PARENT_SCOPE)
set(APSU_SOURCE_FILES_SENDER_DDH ${APSU_SOURCE_FILES_SENDER_DDH} PARENT_SCOPE)
set(APSU_SOURCE_FILES_RECEIVER_DDH ${APSU_SOURCE_FILES_RECEIVER_DDH} PARENT_SCOPE)